# twapi-data-rs

./: Cargo.toml
maker/: main.rb
src/: lib.rs  v1.rs
src/v1/: error.rs  object.rs  tweet.rs  user.rs
src/v1/api/: search.rs
src/v1/object/: entries.rs  error.rs  geo.rs  tweet.rs  user.rs
