[package]
name = "twapi-data"
version = "0.1.0"
authors = ["aoyagikouhei <aoyagi_kouhei@uniquevision.co.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "~1", features = ["derive"] }
serde_json ="~1"
